--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "nodemailer": "^7.0.6"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
+    "xlsx": "^0.18.5"
   }
 }
