--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "fs": "^0.0.1-security",
     "multer": "^2.0.2",
+    "mysql2": "^3.15.1",
     "nodemailer": "^7.0.6",
+    "path": "^0.12.7",
     "xlsx": "^0.18.5"
   }
 }
